<resources>
    <string name="app_name">Mejaku</string>
    <string name="log_out">Log out</string>
    <string name="class_dummy">SCIENCE CLASS BG-234</string>
    <string name="create_class">Create Class</string>
    <string name="home">Home</string>
    <string name="class_name">Class name</string>
    <string name="choose_csv_file">Choose csv file</string>
    <string name="choose_file">Choose File</string>
    <string name="guide_choose_file">*csv file must containing student name, email and parent email</string>
    <string name="guide_upload">Select csv file containing scores to be uploaded</string>
    <string name="upload">Upload</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="update_class">Update Class</string>
    <string name="update">Update</string>
    <string name="predict_per_class">Predict per Class</string>
    <string name="predict_by_yourself">Predict by yourself</string>
    <string name="quiz">Quiz</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="input_scores_to_predict_the_final_score">Input Scores to predict the final score</string>
    <string name="predict_score">Predict Score</string>
    <string name="predicted_score">Predicted Score:</string>
</resources>