<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".classes.CreateClassActivity"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0.5"
        android:src="@drawable/classroom_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_class_name"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/class_name"
        android:textColorHint="#8C8C8C"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_class_24"
        app:startIconTint="#858585">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_class_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/light_blue"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/choose_file"
        app:layout_constraintStart_toStartOf="@+id/edt_layout_class_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_class_name" />

    <TextView
        android:id="@+id/tv_file_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_csv_file"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:singleLine="true"
        android:ellipsize="start"
        app:layout_constraintEnd_toEndOf="@+id/edt_layout_class_name"
        app:layout_constraintStart_toEndOf="@+id/btn_choose_file"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_class_name" />

    <TextView
        android:id="@+id/tv_guide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:singleLine="true"
        android:text="@string/guide_choose_file"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/btn_choose_file"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_file" />

    <Button
        android:id="@+id/btn_create_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/create_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>