<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.uploadscore.UploadScoreActivity"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0.5"
        android:src="@drawable/classroom_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_link_sample_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/csv_format_file"
        android:textStyle="italic"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_choose_file"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_file" />

    <TextView
        android:id="@+id/tv_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/guide_upload"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/choose_file"
        app:layout_constraintEnd_toEndOf="@+id/bg_file"
        app:layout_constraintTop_toBottomOf="@+id/bg_file" />


    <ImageView
        android:id="@+id/bg_file"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/rectangle_base_white"
        app:layout_constraintEnd_toEndOf="@+id/tv_guide"
        app:layout_constraintStart_toStartOf="@+id/tv_guide"
        app:layout_constraintTop_toBottomOf="@+id/tv_guide"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_file_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="start"
        android:singleLine="true"
        android:text="@string/choose_csv_file"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_file"
        app:layout_constraintEnd_toEndOf="@+id/bg_file"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bg_file"
        app:layout_constraintTop_toTopOf="@+id/bg_file" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>